snapshots/syntax/statements/control_flow/resume/multiple_resume_statements.snap
---
source: vb6parse/src/syntax/statements/control_flow/resume.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: OnErrorStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: OnKeyword
                  text: "On"
                - kind: Whitespace
                  text: " "
                - kind: ErrorKeyword
                  text: Error
                - kind: Whitespace
                  text: " "
                - kind: GotoKeyword
                  text: GoTo
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: ErrorHandler
                - kind: Newline
                  text: "\n"
            - kind: ExitStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ExitKeyword
                  text: Exit
                - kind: Whitespace
                  text: " "
                - kind: SubKeyword
                  text: Sub
            - kind: Newline
              text: "\n"
            - kind: LabelStatement
              children:
                - kind: Identifier
                  text: ErrorHandler
                - kind: ColonOperator
                  text: ":"
                - kind: Newline
                  text: "\n"
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: MemberAccessExpression
                      children:
                        - kind: Identifier
                          text: Err
                        - kind: PeriodOperator
                          text: "."
                        - kind: Identifier
                          text: Number
                    - kind: Whitespace
                      text: " "
                    - kind: EqualityOperator
                      text: "="
                    - kind: Whitespace
                      text: " "
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "5"
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: ResumeStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: ResumeKeyword
                          text: Resume
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: IfKeyword
                  text: If
                - kind: Newline
                  text: "\n"
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: MemberAccessExpression
                      children:
                        - kind: Identifier
                          text: Err
                        - kind: PeriodOperator
                          text: "."
                        - kind: Identifier
                          text: Number
                    - kind: Whitespace
                      text: " "
                    - kind: EqualityOperator
                      text: "="
                    - kind: Whitespace
                      text: " "
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "11"
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: ResumeStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: ResumeKeyword
                          text: Resume
                        - kind: Whitespace
                          text: " "
                        - kind: NextKeyword
                          text: Next
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: IfKeyword
                  text: If
                - kind: Newline
                  text: "\n"
            - kind: ResumeStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ResumeKeyword
                  text: Resume
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: CleanUp
                - kind: Newline
                  text: "\n"
            - kind: LabelStatement
              children:
                - kind: Identifier
                  text: CleanUp
                - kind: ColonOperator
                  text: ":"
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: EndOfLineComment
              text: "' Cleanup"
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
